--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-
+torch==2.1.0
+torchvision==0.16.0
+transformers==4.35.0
+tqdm==4.66.1
+Pillow==10.1.0
+numpy==1.24.4
+scikit-learn==1.3.2
+matplotlib==3.8.1
+opencv-python==4.8.1.78
+Salesforce-blip==2.7.0
